# PCM_ASDs_PCA

./: .gitignore  LICENSE  LICENSE.txt  README.md  analysis.py  check.py  filter.py  multiwell.py  parse.py  parse_multiwell.py  pca.py  pca_one_plate.py  plate.py  pyphi.py  pyphi_batch.py  pyproject.toml  raman.py  requirements.txt  sample.env  sample.py  settings.py  setup.py  singlewell.py  sort.py  spectra.py  visualise_one_plate.py
data_collected/: plate2_60mgml_B5.txt  plate2_60mgml_B5_edge.txt  plate2_60mgml_C7.txt  plate2_60mgml_D5.txt  plate2_60mgml_E10.txt  plate2_60mgml_multiwell.txt
pcm_asds_pca/analysis/: pca.py  spectra.py
pcm_asds_pca/config/: settings.py
pcm_asds_pca/core/: parse.py  sample.py  sort.py
pcm_asds_pca/pyphi/: pyphi_plots.py
pyphi/: __init__.py  pyphi.py  pyphi_plots.py
spectra_data/: A10_20251112_PCM_01.txt  A2_20251112_PCM_01.txt  A4_20251112_PCM_01.txt  A7_20251112_PCM_01.txt  plate1_15mgml_A10.txt  plate1_15mgml_A2.txt  plate1_15mgml_A4.txt  plate1_15mgml_A7.txt  plate2_60mgml_A12_cent.txt  plate2_60mgml_B1.txt  plate2_60mgml_B10_cent.txt  plate2_60mgml_B7_cent.txt  plate2_60mgml_C10_cent.txt  plate2_60mgml_C5_cent.txt  plate2_60mgml_D10_cent.txt  plate2_60mgml_E11_cent.txt  plate2_60mgml_E9_cent.txt  plate2_60mgml_glass_ref_edge.txt  plate3_30mgml_multiwell.txt  plate4_15mgml_multiwell.txt
