[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PCM_ASDs_PCA"
version = "2.0.1"

dependencies = [
        "bokeh",
        "matplotlib",
        "numpy",
        "openpyxl",
        "pandas",
        "pyomo",
        "python-dotenv",
        "scipy",
        "spyder",
        "xlrd",
]

authors = [
    {name = "Sal Garcia", email = "sgarciam@ic.ac.uk"}
]

maintainers = [
    {name = "Luca Morelli", email = "luca.morelli.2022@uni.strath.ac.uk"}
]

description = "Principle Component Analysis on Raman spectra of Paracetamol Amorphous Solid Dispersions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]

classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
]

[project.optional-dependencies]
ramanspy = ["ramanspy"]

[project.urls]
Original_repository = "https://github.com/salvadorgarciamunoz/pyphi"
Original_repository_documentation = "https://salvadorgarciamunoz.github.io/pyphi/index.html"
Repository = "https://github.com/lca6/PCM_ASDs_PCA"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pcm_asds_pca*"]

